<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="album_title_bookmarks">Bookmarks</string>
    <string name="album_title_files">Files</string>
    <string name="album_title_history">History</string>
    <string name="album_title_home">Home</string>
    <string name="album_title_pass">Login data</string>
    <string name="album_untitled" />
    <string name="app_cancel">Cancel</string>
    <string name="app_close">Close</string>
    <string name="app_name">FOSS Browser</string>
    <string name="app_ok">OK</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="clear_summary_deleteDatabase">Delete the whole database (Startpage, bookmarks, history and all whitelists).</string>
    <string name="clear_summary_quit">Every time you quit \"FOSS Browser\" all above checked data will be deleted.</string>
    <string name="clear_title_bookmarks">Clear Bookmarks</string>
    <string name="clear_title_cache">Clear Cache</string>
    <string name="clear_title_cookie">Clear Cookies</string>
    <string name="clear_title_deleteDatabase">Delete database</string>
    <string name="clear_title_history">Clear History</string>
    <string name="clear_title_indexedDB">Clear \"indexed databases\" and \"local webview storage\"</string>
    <string name="clear_title_quit">Clear when application exits</string>
    <string name="dialog_sign_in_password">Password</string>
    <string name="dialog_sign_in_username">Username</string>
    <string name="fastToggle_dialog">If you long press the \"menu\" or the \"Navigation button\" the \"Fast toggle dialog\" will open. Here you can change some important settings without leaving the current website. You can also add websites to your whitelist for AdBlocker, JavaScript or Cookies..</string>
    <string name="fastToggle_title">Fast toggle</string>
    <string name="list_empty">Current list is empty</string>
    <string name="main_menu_new_tab">New tab (background)</string>
    <string name="main_menu_new_tabOpen">New tab (foreground)</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_dialog">Manage your tabs, share or save content, handle the current tab or use some features: just try it. The menu can be dismissed, like all other notifications, by clicking back, clicking outside the menu or simply be swiping the menu down.</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_share">Share</string>
    <string name="menu_title">Menu</string>
    <string name="nav_dialog">Use the \"Navigation Button\": swipe up/down -> scroll to top/bottom; swipe left/right -> navigate back/forward; click -> open the menu; long click -> open \"Fast toggle dialog\"; double click -> Hide the \"Navigation Button\".</string>
    <string name="nav_title">Navigation</string>
    <string name="not_dialog">Notifications are displayed on the bottom of the screen. They can also be dismissed like the menus.</string>
    <string name="not_title">Notifications</string>
    <string name="setting_label">Settings</string>
    <string name="setting_summary_adblock">Enable AdBlock to block annoying ads. Sites also load faster when enabled.</string>
    <string name="setting_summary_background">Display a notification and open links in background. If disabled links will open immediately.</string>
    <string name="setting_summary_confirm_exit">Confirmation dialog when closing browser.</string>
    <string name="setting_summary_confirm_tab_close">Confirmation dialog when closing a tab.</string>
    <string name="setting_summary_cookie">Enable Cookies. Cookies are small text files, which are stored on your device. Websites use them for example to store user settings (for example search settings). But they could also be used to collect personal user data. Third party cookies (they collect user data for advertising) are always disabled.</string>
    <string name="setting_summary_cookie_delete">If enabled, all cookies will be deleted. Also the Cookies of trusted websites.</string>
    <string name="setting_summary_hide">Use the whole screen when scrolling through websites. If you press the back button you will leave fullscreen mode.</string>
    <string name="setting_summary_history">Save the history of visited websites.</string>
    <string name="setting_summary_images">Enable Network images. Disabling could be useful to save mobile data and to load websites faster.</string>
    <string name="setting_summary_inverted">If checked, content will be rendered in a inverted grey scale mode. This is a kind of \"night mode\".</string>
    <string name="setting_summary_javascript">Enable JavaScript. Many websites need JavaScript for their functionality (menus, loading and displaying images, …). But they are also a risk and can be used for attacks.</string>
    <string name="setting_summary_location">Allow websites to access your location. Some websites (like Google maps for navigation) need this enabled.</string>
    <string name="setting_summary_nav_pos">Decide where the \"Navigation Button\" will be placed.</string>
    <string name="setting_summary_nav_show">Hide the \"Navigation Button\" when toolbar is shown.</string>
    <string name="setting_summary_omnibox_control">Swipe omnibox left/right to switch tabs</string>
    <string name="setting_summary_remote">Enable remote content, which is not directly from the website you are visiting. Disabling this is more secure, faster and saves data volume. But some content will not be displayed anymore.</string>
    <string name="setting_summary_tab">What should be shown at the start of \"FOSS Browser\"? The Start Page, you bookmarks, …</string>
    <string name="setting_summary_themeDark">You like it a little bit brighter? Do it!</string>
    <string name="setting_summary_whitelist">Allow these sites to show ads. Some sites do not work, when AdBlock is enabled.</string>
    <string name="setting_summary_whitelistCookie">If you disable Cookies, you can use this whitelist to allow sites you trust to use save cookies.</string>
    <string name="setting_summary_whitelistJS">If you disable JavaScript, you can use this whitelist to allow sites you trust to use javascript.</string>
    <string name="setting_title_adblock">AdBlock</string>
    <string name="setting_title_background">Open links</string>
    <string name="setting_title_confirm_exit">Confirm browser exit</string>
    <string name="setting_title_confirm_tab_close">Confirm tab close</string>
    <string name="setting_title_cookie">Cookies</string>
    <string name="setting_title_hideToolbar">Hide toolbar</string>
    <string name="setting_title_history">History</string>
    <string name="setting_title_images">Images</string>
    <string name="setting_title_inverted">Inverted colors</string>
    <string name="setting_title_javascript">JavaScript</string>
    <string name="setting_title_location">Location</string>
    <string name="setting_title_nav">Navigation button</string>
    <string name="setting_title_nav_pos">Position</string>
    <string name="setting_title_nav_show">Hide</string>
    <string name="setting_title_omnibox_control">Omnibox Control</string>
    <string name="setting_title_remote">Remote content</string>
    <string name="setting_title_tab">Start tab</string>
    <string name="setting_title_themeDark">Light theme</string>
    <string name="setting_title_toolbar">Toolbar</string>
    <string name="setting_title_whitelist">AdBlock whitelist</string>
    <string name="setting_title_whitelistCookie">Cookie whitelist</string>
    <string name="setting_title_whitelistJS">JavaScript whitelist</string>
    <string name="settings_dialog">There are even more options in the settings. Try it out!</string>
    <string name="sp_ad_block">SP_AD_BLOCK_9</string>
    <string name="sp_clear_bookmarks">SP_CLEAR_BOOKMARKS_9</string>
    <string name="sp_clear_cache">SP_CLEAR_CACHE_9</string>
    <string name="sp_clear_cookie">SP_CLEAR_COOKIE_9</string>
    <string name="sp_clear_history">SP_CLEAR_HISTORY_9</string>
    <string name="sp_clear_quit">SP_CLEAR_QUIT_9</string>
    <string name="sp_cookies">SP_COOKIES_9</string>
    <string name="sp_images">SP_IMAGES_9</string>
    <string name="sp_javascript">SP_JAVASCRIPT_9</string>
    <string name="sp_location">SP_LOCATION_9</string>
    <string name="sp_omnibox_control">SP_OMNIBOX_CONTROL_9</string>
    <string name="startpage_dialog">Here you can access all your data: saved sites on the startpage, bookmarks, history, saved login data and the integrated file browser. In the settings you can decide which content will be shown at start.</string>
    <string name="startpage_title">Startpage</string>
    <string name="tab_dialog">Click the preview of a tab to select it, click again to close the tab preview. To close a tab simply swipe to preview to the top or bottom.</string>
    <string name="tab_title">Tab preview</string>
    <string name="toolbar_dialog">At the bottom of the screen you have the toolbar. You can enter URLs or search for something, reload the website and open the menu. Long click on the \"menu button\" to open the \"Fast toggle menu\". Swipe the toolbar up to open the tab preview. To switch between tabs swipe left or right.</string>
    <string name="toolbar_title">Toolbar</string>
    <string name="whitelist_add">Add</string>
    <string name="whitelist_edit_hint">Domain</string>
</resources>