<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/clear_title_cache" android:key="@string/sp_clear_cache" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/clear_title_bookmarks" android:key="@string/sp_clear_bookmarks" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/clear_title_history" android:key="@string/sp_clear_history" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/clear_title_indexedDB" android:key="sp_clearIndexedDB" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/clear_title_cookie" android:key="@string/sp_clear_cookie" android:summary="@string/setting_summary_cookie_delete" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/clear_title_quit" android:key="@string/sp_clear_quit" android:summary="@string/clear_summary_quit" android:defaultValue="false" />
    <Preference android:title="@string/clear_title_deleteDatabase" android:key="sp_deleteDatabase" android:summary="@string/clear_summary_deleteDatabase" />
</PreferenceScreen>