<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="?android:colorBackground" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:layout_gravity="center" android:id="@id/dialog_title" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/toolbar_title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/startpage_title" />
            <ImageView android:id="@id/cardView_help_startpage" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:scaleType="fitCenter" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="32.0dip" android:text="@string/startpage_dialog" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/toolbar_title" />
            <ImageView android:id="@id/cardView_help_logo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:scaleType="centerInside" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="32.0dip" android:text="@string/toolbar_dialog" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tab_title" />
            <ImageView android:id="@id/cardView_help_tabs" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:scaleType="centerInside" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="32.0dip" android:text="@string/tab_dialog" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/menu_title" />
            <ImageView android:id="@id/cardView_help_menu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:scaleType="centerInside" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="32.0dip" android:text="@string/menu_dialog" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fastToggle_title" />
            <ImageView android:id="@id/cardView_help_fastToggle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:scaleType="centerInside" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="32.0dip" android:text="@string/fastToggle_dialog" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/not_title" />
            <ImageView android:layout_gravity="center" android:id="@id/cardView_help_not" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:scaleType="centerInside" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="32.0dip" android:text="@string/not_dialog" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/nav_title" />
            <ImageView android:id="@id/cardView_help_nav" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:scaleType="centerInside" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="32.0dip" android:text="@string/nav_dialog" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/setting_label" />
            <ImageView android:id="@id/cardView_help_set" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:scaleType="centerInside" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_dialog" />
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
                <View android:background="?android:colorControlHighlight" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="16.0dip" />
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageButton android:layout_gravity="center" android:id="@id/floatButton_settings" android:background="?actionBarItemBackground" android:layout_width="42.0dip" android:layout_height="42.0dip" android:src="@drawable/icon_settings" android:contentDescription="@null" android:layout_marginStart="4.0dip" android:layout_marginEnd="4.0dip" />
                    <ImageButton android:layout_gravity="center" android:id="@id/floatButton_ok" android:background="?actionBarItemBackground" android:layout_width="42.0dip" android:layout_height="42.0dip" android:src="@drawable/check_white" android:contentDescription="@null" android:layout_marginStart="4.0dip" android:layout_marginEnd="4.0dip" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>