<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="20.0dip" android:paddingEnd="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.TextInputLayout android:id="@id/login_title" android:layout_width="fill_parent" android:layout_height="wrap_content" app:passwordToggleEnabled="false">
        <EditText android:id="@id/pass_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/menu_edit" android:inputType="text" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" app:passwordToggleEnabled="false">
        <EditText android:id="@id/pass_userName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/dialog_sign_in_username" android:inputType="text" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" app:passwordToggleEnabled="true">
        <EditText android:id="@id/pass_userPW" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/dialog_sign_in_password" android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>